+ improved add product function which was failing to add the product and image into database.

--- a/admin/css/color-palette.css
+++ b/admin/css/color-palette.css
@@ -10,4 +10,5 @@
     --800: hsl(24, 100%, 30%);
     --900: hsl(23, 91%, 25%);
     --950: hsl(21, 97%, 14%);
+    --bg-color : hsl(0, 0%, 87%);
 }
