--- a/admin/css/dashboard.css
+++ b/admin/css/dashboard.css
@@ -37,15 +37,12 @@ body{
 nav{
     background-color: var(--50);
     width: 100%;
-    height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.2rem;
-    padding: 0 20px;
+    padding: 1rem;
 }
 nav h2 {
-    font-size: 1.5rem;
     margin-left: 40px;
 }
 .nav-links {
@@ -59,7 +56,7 @@ nav h2 {
     text-decoration: none;
     padding: 10px 15px;
     border-radius: 5px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     position: relative;
     transition: all 0.3s ease;
 }
