add to cart functions to add

--- a/client/css/cart.css
+++ b/client/css/cart.css
@@ -61,7 +61,6 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     padding: 1.5rem;
-    font-size: 1.2rem;
     font-weight: bold;
     background-color: hsl(0,0%,90%);
 }
@@ -130,7 +129,7 @@ nav {
 }
 .checkout-btn {
     width: 100%;
-    padding: 15px;
+    padding: 10px;
     background-color: #000;
     color: #fff;
     border: none;
@@ -141,4 +140,8 @@ nav {
 }
 .checkout-btn:hover {
     background-color: #333;
+}
+a {
+    text-decoration: none;;
+    color: white;
 }
