view product page added.

--- a/client/css/color.css
+++ b/client/css/color.css
@@ -10,4 +10,6 @@
     --800: oklch(0.473 0.137 46.201);
     --900: oklch(0.414 0.112 45.904);
     --950: oklch(0.279 0.077 45.635);
+    --bg-color: oklch(90.06% 0.0001 271.152);
+    --box-shadow-effect: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
