--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -19,6 +19,12 @@ nav {
     display: flex;
     float: right;
 }
+#menu form input  {
+    display: flex;
+    align-self: center;
+    margin: 9px 1rem 0 0;
+    padding: 4px;
+}
 
 .user-features a {
     text-decoration: none;
@@ -32,7 +38,7 @@ nav {
 .user-features a span {
     display: flex;
     height: 100%;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     justify-content: center;
 }
 
